      that barcodes are always solid lines (patch by Erelen).

    - [RT #98549] Rename meterlimit to miterlimit (patch by Phil
      Perry).

    - [RT #98534] Rename hspace to hscale (patch by Phil Perry).

    - Fixed an infinite loop when RunLengthDecode is used for output.

    - [RT #65582] Fix embedding of OpenType fonts (fix by Simon Cozens).


2.025     2015-09-23

    - The previous release included a patch that broke compatibility
      with Perl 5.8.x.  The minimum supported version is now Perl
      5.8.5, and there is a .perl-version file to facilitate testing
      using plenv.


2.024     2015-09-18

    - [RT #104133] Include all bounding boxes when importing a page
      (patch by Don Huettl of Grant Street Group).

    - [RT #104133] When retrieving bounding boxes for a page, fall
      back according to the defaults listed in the PDF spec (patch by
      Don Huettl of Grant Street Group).

    - Barcodes now take an optional -caption argument that will be
      printed beneath the barcode.  This can replace or be used in
      conjunction with the text representation of the barcode
      (requested by Gareth Tunley).

    - [RT #105581] Calls to width() in BaseFont are now significantly
      faster (patch by Dmitri Tikhonov).


2.023     2014-09-12

    - The fix for [RT #69503] broke a previously-working case where a
      page object could be passed (and was expected).  The -firstpage
      option now accepts a page object or a page number.  Thanks to
      Marco Pessotto for the bug report and test.


2.022     2014-07-04

    - Added $pdf->version() get/set method.  When opening an existing
      PDF, the existing version number will now be retained.

    - Renamed the following in PDF::API2:
        - importpage to import_page
        - openScalar to open_scalar

      The old names are deprecated.

    - [RT #69503] Fix the -firstpage option to $pdf->preferences() so
      that it doesn't always lead to a crash (reported by Dietrich