@@ -19,6 +19,9 @@
 
     - [RT #65582] Fix embedding of OpenType fonts (fix by Simon Cozens).
 
+    - [RT #67767] Allow an empty page to be imported into a PDF using
+      importPageIntoForm (reported by Antti Lankila).
+
 
 2.025     2015-09-23
 
